# Candlelight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
candlelight/: CMakeLists.txt
candlelight/include/: CMakeLists.txt  candlelight_api.h  candlelight_types.h
candlelight/shaders/: CMakeLists.txt  default_shader.ps.hlsl  default_shader.vs.hlsl
candlelight/src/: CMakeLists.txt  application.cpp  application.h  command_queue.cpp  command_queue.h  debug.cpp  debug.h  dxgi_debug.cpp  dxgi_debug.h  helpers.h  render_common.h  render_pipeline.cpp  render_pipeline.h  renderer.cpp  renderer.h  resource.cpp  resource.h  shader.cpp  shader.hpp  utils.h
candlelight/src/core/: CMakeLists.txt
candlelight/src/core/algorithm/basic/: BasicAlgorithms.h
candlelight/src/core/algorithm/memory/: CMakeLists.txt  MemoryAlgorithms.h
candlelight/src/core/architecture/: BaseContext.h  BaseObject.h  BaseRawObject.h
candlelight/src/core/debug/: CMakeLists.txt  DebugTools.cpp  DebugTools.h
candlelight/src/core/dependency_handling/: CMakeLists.txt  ServiceResolver.cpp  ServiceResolver.h
candlelight/src/core/logger/: CMakeLists.txt  Logger.cpp  Logger.h
candlelight/src/core/types/: Basic.h  CMakeLists.txt  GUID.h  Transform.h
candlelight/src/core/types/3d/: CMakeLists.txt  GenericMesh.cpp  GenericMesh.h  IndexTriangle.h  Vertex.h
candlelight/src/general/: Application.cpp  Application.h  CMakeLists.txt
candlelight/src/rendering/: CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  D3D12Debug.cpp  D3D12Debug.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  RenderingContext.h  Resource.cpp  Resource.h  Shader.cpp  Shader.hpp  SwapChainFactory.cpp  SwapChainFactory.h
candlelight/src/rendering/renderers/: CMakeLists.txt  MeshRenderer.cpp  MeshRenderer.h
